@@ -726,6 +726,7 @@ Other memory:
 	* Changes for use with SDCC compiler
 	* Added a simulated z80 target
 	* Fix deadlock errors when using stdio but with no buffering
+	* Add support for Pascal P-Code interpreter
 </pre></ul>
 
 <table width ="100%">
